package NYT.NCypress.NProto;

import "yt/ytlib/misc/guid.proto";

////////////////////////////////////////////////////////////////////////////////

message TReqLock
{
    required int32 mode = 1;
}

message TRspLock
{
    required NYT.NProto.TGuid lock_id = 1;
}

////////////////////////////////////////////////////////////////////////////////

message TReqCreate
{
    required int32 type = 1;
}

message TRspCreate
{
    required NYT.NProto.TGuid object_id = 1;
}

////////////////////////////////////////////////////////////////////////////////
